[package]
name = "solana_geyser_subscription"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
chrono = "0.4"
bs58 = "0.4.0"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.10"
